--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: path
+      run:
+        echo $ChromeWebDriver
+      shell: powershell
     - name: npm install, build, and test
       run: |
         npm install
