--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 before_install:
-  - make install-test
+  - sudo apt-get install chromium-chromedriver
 env:
   - CHROMEHEADLESS=true
