--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - 10.16.1
+addons:
+  chrome: stable
 before_install:
   - sudo apt-get install chromium-chromedriver
 env:
