--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
   "name": "nasa-apod",
-  "version": "1.0.0",
-  "description": "This is a simple web app to showcase stuff such as testing.",
-  "main": "index.js",
-  "scripts": {
-    "test": "cucumber-js"
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-scripts": "3.1.2"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test && cucumber-js",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "cucumber": "^5.1.0",
     "selenium-webdriver": "^4.0.0-alpha.5"
