--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test && cucumber-js",
+    "test": "react-scripts test --coverage && cucumber-js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
