--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - sudo apt-get install chromium-chromedriver
 - npm install -g codecov
 script:
-- npm test --coverage
+- npm test
 - codecov
 env:
   global:
